policies/policy.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedingresshost
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedIngressHost
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            domainName:
              type: string
            excludedContainers:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedingresshost
        violation[{"msg": msg}] {
          namespace := input.review.object.metadata.namespace
          rules := input.review.object.spec.rules[_]
          fullDomain := concat("", [namespace,".",input.parameters.domainName])
          not endswith(rules.host, fullDomain)
          msg := sprintf("Ingress hostname %v is invalid allowed domain is %v", [rules.host, fullDomain])
        }
